# solana-geyser-zmq

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  account_info_generated.rs  common_generated.rs  transaction_info_generated.rs
.github/workflows/: build.yml  build_on_ubuntu_20.04.yml  build_on_ubuntu_22.04.yml  release.yml
ci/: cargo-build-test.sh  cargo-install-all.sh  create-tarball.sh  rust-version.sh  solana-version.sh  test-geyser-plugin.sh
config/: geyser-plugin-config-mac.json  geyser-plugin-config.json
scripts/: check_errors.sh  clean.sh  logs.sh  run.sh
solana-geyser-plugin-scaffold/: Cargo.toml
solana-geyser-plugin-scaffold/src/: config.rs  entrypoint.rs  geyser_plugin_hook.rs  lib.rs  metrics.rs
solana-geyser-plugin-scaffold/src/fb_serializers/: extractors.rs  mod.rs  update_types.rs
src/: api.rs  config.rs  db.rs  errors.rs  filters.rs  geyser_plugin_hook.rs  lib.rs  main.rs  metrics.rs  receiver.rs  sender.rs
src/flatbuffer/: account_info.fbs  account_info_generated.rs  block_info.fbs  block_info_generated.rs  common.fbs  common_generated.rs  consts.rs  extractors.rs  metadata.fbs  metadata_generated.rs  metadata_off_chain.fbs  metadata_off_chain_generated.rs  mod.rs  slot.fbs  slot_generated.rs  transaction_info.fbs  transaction_info_generated.rs
utils/: Cargo.toml
utils/src/: errors.rs  lib.rs  receiver.rs  sender.rs
utils/src/flatbuffer/: account_data.fbs  account_data_generated.rs  account_info.fbs  account_info_generated.rs  block_info.fbs  block_info_generated.rs  common.fbs  extractors.rs  mod.rs  transaction_info.fbs  transaction_info_generated.rs  update_types.rs
