[package]
name = "solana-geyser-plugin-scaffold"
version = "1.11.2"
edition = "2021"
description = "The simplest Solana Geyser Plugin ever"
authors = ["mwrites <mwrites.pub@pm.me>"]
repository = "https://github.com/mwrites/solana-geyser-plugin-scaffold"
license = "Apache-2.0"
keywords = ["solana", "geyser", "plugin", "solana-geyser-plugin"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.13.6" }
solana-logger = { version = "=1.13.6" }
log = "0.4.14"
bs58 = "0.4.0"
zmq = "0.10.0"
flatbuffers = "23.1.21"
parking_lot = "0.12.0"
solana-sdk = { version = "=1.13.6" }
solana-transaction-status = { version = "=1.13.6" }
solana-program = { version = "=1.13.6" }
solana-metrics = { version = "=1.13.6" }
serde = { version = "1.0.133" }
serde_json = "1.0.75"
anyhow = "1.0.52"
thiserror = "1.0"
reqwest = "0.11.14"