[package]
name = "solana-geyser-plugin-scaffold"
version = "1.11.2"
edition = "2021"
description = "The simplest Solana Geyser Plugin ever"
authors = ["mwrites <mwrites.pub@pm.me>"]
repository = "https://github.com/mwrites/solana-geyser-plugin-scaffold"
license = "Apache-2.0"
keywords = ["solana", "geyser", "plugin", "solana-geyser-plugin"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.14.27" }
solana-logger = { version = "=1.14.27" }
log = "0.4.17"
bs58 = "0.4.0"
flatbuffers = "23.1.21"
parking_lot = "0.12.0"
solana-sdk = { version = "=1.14.27" }
solana-transaction-status = { version = "=1.14.27" }
solana-program = { version = "=1.14.27" }
solana-metrics = { version = "=1.14.27" }
serde = { version = "1.0.133" }
serde_json = "1.0.75"
anyhow = "1.0.52"
thiserror = "1.0"
bincode = "1.3.3"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "fast-rng"
]