[package]
name = "utils"
version = "0.1.8"
edition = "2021"
repository = "https://github.com/extrnode/solana-geyser-zmq"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
bs58 = "0.4.0"
flatbuffers = "23.1.21"
parking_lot = "0.12.0"
serde = { version = "1.0.133" }
serde_json = "1.0.75"
anyhow = "1.0.52"
thiserror = "1.0"
bincode = "1.3.3"
tokio = { version = "1.26.0", features = ["full", "tracing"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "fast-rng"
]